Update for electron 1.3.1

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,8 @@ electron/*.dat
 electron/*.bin
 electron/*.pak
 electron/*.exe
-electron/LICENSE
-electron/version
-electron/resources/*.asar
-electron/locales
+electron/*.html
+*LICENSE
+*version
+*.asar
+*locales
